# immune-health-pbmc

./: .gitattributes  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  environment.yml  gefion_env.txt  pyproject.toml  raw_to_lineage_split_and_merge.md
configs/: common.yaml  local.example.yaml
docs/: DEVELOPMENT_WORKFLOW.md  EXTERNAL_ASSETS.md  TRIPSO_PROVENANCE.md  data_contract.md  donor_distribution_aggregation.md  gefion_compute_plan.md  gefion_mirror_request_email.txt  gefion_runbook.md  gene_programs.md  lodo_design.md  output_schema.md  pipeline_overview.md  post_training_projection.md  production_workflow.md  reference_preparation.md  running_on_slurm.md  tripso_environment.md
reports/: geneformer_asset_validation.json  tripso_environment.json  tripso_environment_pinned.json  tripso_environment_real_smoke.json  tripso_environment_with_geneformer.json
scripts/: 00_validate_config.py  audit_data.py  check_tripso_import.py  combine_job_manifests.py  download_geneformer.py  generate_downstream_jobs.py  generate_job_manifests.py  generate_post_training_jobs.py  generate_reference_prep_jobs.py  run_real_baseline_smoke.py  run_real_tripso_smoke.py  validate_tripso_environment.py  write_gefion_runtime_config.py
slurm/: activate_packed_environment.sh  cpu_nodepack.sbatch  gefion_submission_helpers.sh  load_gefion.sh  reference_prep_array.sbatch  run_manifest_nodepack.py  run_manifest_task.py  tripso_array.sbatch  tripso_nodepack.sbatch
splits/: global_donor_manifest.tsv  lodo_aidav2.tsv  lodo_immuneindonesia.tsv  lodo_immunobiologyaging.tsv  lodo_onek1k.tsv  lodo_terekhova.tsv  split_manifest.json
tests/: test_age_kernel_reference.py  test_aggregation_reference.py  test_arrow_bridge.py  test_cli.py  test_combine_job_manifests.py  test_config_loading.py  test_data_contract.py  test_downstream_jobs.py  test_empirical_matched_depth.py  test_end_to_end.py  test_endpoint_pipeline.py  test_gefion_runtime.py  test_production_vertical_slice.py  test_real_baseline_smoke.py  test_reference_prep_jobs.py  test_reference_preparation.py  test_slurm_nodepack.py  test_splits_sampling_gp.py  (+7 more)
(+271 files in other folders)
