[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "immune-health-pbmc"
version = "0.1.0.dev0"
description = "Interpretable and transferable immune-health modelling from PBMC single-cell RNA-seq data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.10,<0.11",
    "h5py>=3.10",
    "numpy>=1.24,<2",
    "pandas>=2.0,<3",
    "pyarrow>=14",
    "PyYAML>=6.0",
    "scikit-learn>=1.4",
    "scipy>=1.10",
]

[project.scripts]
immune-health = "immune_health.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["immune_health", "immune_health.*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
